feat(auth): complete auth microservice